chore(hooks): PostToolUse per-file format + Stop full-verify
Mirror of the back hooks (byte-identical shared scripts) so either repo
can be the session root. Committed in .claude/settings.json next to
permissions; no PreToolUse.

- format-file.sh: *.ts/*.tsx/*.html/*.scss/*.css -> node_modules/.bin/
  prettier (the *.java jar branch is back-only, skipped here). Side-effect
  only, never fails an edit.
- verify-on-stop.sh: full verify of every dirty tree — front dev-AOT build
  of common/admin/app + one-shot ng test; block-once, porcelain-scoped.
- docs/sources-log.md: provenance, doc-drift, traps.